--- a/app/kubernetes/application.yaml
+++ b/app/kubernetes/application.yaml
@@ -17,6 +17,17 @@ spec:
       - name: sre-challenge
         image: thomasmldejong/sre-challenge:sre-challenge
         imagePullPolicy: Always
+        env:
+        - name: DB_HOST 
+          value: postgresql
+        - name: DB_PORT
+          value: '5432' 
+        - name: DB_NAME
+          value: user_authentication
+        - name: DB_USER
+          value: user_authentication
+        - name: DB_PASSWORD 
+          value: password123
 ---
 apiVersion: v1
 kind: Service
